--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.22",
         "fideloper/proxy": "^4.0",
+        "kylekatarnls/laravel-carbon-2": "^1.0.0",
         "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.4",
-        "laravel/tinker": "^1.0"
+        "laravel/passport": "^7.5",
+        "laravel/tinker": "^1.0",
+        "nesbot/carbon": "2.24.0 as 1.39.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
