--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "App\\": "app/"
         }
     },
     "minimum-stability": "dev",
