--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
         "nesbot/carbon": "2.24.0 as 1.39.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
+        "beyondcode/laravel-dump-server": "^1.3",
+        "facade/ignition": "^1.4",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -45,7 +46,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "app/"
+            "Tests\\": "tests/"
         }
     },
     "minimum-stability": "dev",
