--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.22",
+        "php": "^7.4.8",
         "fideloper/proxy": "^4.0",
         "kylekatarnls/laravel-carbon-2": "^1.0.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/passport": "^7.5",
-        "laravel/tinker": "^1.0",
-        "nesbot/carbon": "2.24.0 as 1.39.0"
+        "laravel/tinker": "^2.0",
+        "nesbot/carbon": "^2.37"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.3",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
