--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.4.8",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.2",
         "kylekatarnls/laravel-carbon-2": "^1.0.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/passport": "^7.5",
         "laravel/tinker": "^2.0",
@@ -20,8 +22,8 @@
         "beyondcode/laravel-dump-server": "^1.3",
         "facade/ignition": "^2.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
     },
